# nlw-operator-computer-vision

./: .gitignore  README.md  update_notebook.py  webcam_object_detection.ipynb
computer_vision_app/: main.py  pyproject.toml
lenet/: lenet5.ipynb  lenet5_mnist.pth  pyproject.toml
recog_system/: classifier_timm.ipynb  clipseg_segmentation.ipynb  gemini_vision.ipynb  main.py  pyproject.toml  yolos_detection.ipynb
