[project]
name = "recog-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "typing-extensions>=4.15.0",
]
